# hollow_katana

./: .gitignore  CMakeLists.txt  README.md
assets/: config.ini
include/: animation.h  atlas.h  barb.h  bullet_time_manager.h  character.h  character_manager.h  collision_box.h  collision_layer.h  collision_manager.h  enemy.h  enemy_state_nodes.h  player.h  player_state_nodes.h  resources_manager.h  state_machine.h  state_node.h  sword.h  test_defines.h  timer.h  util.h  vector2.h
source/: barb.cpp  bullet_time_manager.cpp  character.cpp  character_manager.cpp  collision_manager.cpp  enemy.cpp  enemy_state_nodes.cpp  main.cpp  player.cpp  player_state_nodes.cpp  resources_manager.cpp  state_machine.cpp  sword.cpp
